--- a/admin/src/app/components/dashboard/dashboard.component.html
+++ b/admin/src/app/components/dashboard/dashboard.component.html
@@ -12,13 +12,18 @@
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active">
-              <i class="fas fa-user"></i>User Profile
+              <fa-icon [icon]="faUser"></fa-icon>
+              User Profile
             </a>
           </li>
           <!-- Calling SignOut() Api from AuthService -->
           <li class="nav-item">
             <a class="nav-link" (click)="authService.SignOut()">
-              <i class="fas fa-sign-out-alt"></i>Log out
+
+              <fa-icon [icon]="faSignOutAlt"></fa-icon>
+             Log out
+
+
             </a>
           </li>
         </ul>
