--- a/admin/src/styles.scss
+++ b/admin/src/styles.scss
@@ -659,3 +659,8 @@ body .table thead th {
     display: none;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
