--- a/admin/src/app/components/dashboard/dashboard.component.html
+++ b/admin/src/app/components/dashboard/dashboard.component.html
@@ -52,12 +52,12 @@
                 <p>
                   
                 </p>
-                <div class="d-flex justify-content-start command">
+                <!-- <div class="d-flex justify-content-start command">
                     <button mat-raised-button color="basic" (click)="setPage(1)">Register</button>
                     <button mat-raised-button color="accent" (click)="setPage(3)">View</button>
-                </div>
+                </div> -->
                 <div class="justify-content-between">
-                  <div>
+                  <!-- <div>
                     <app-add-student *ngIf="page === 1"></app-add-student>
                   </div>
 
@@ -67,7 +67,7 @@
 
                   <div>
                     <app-student-list *ngIf="page === 3"></app-student-list>
-                  </div>
+                  </div> -->
                   <div>
                     <app-client-alerts></app-client-alerts>
                   </div>
