--- a/admin/src/app/components/dashboard/dashboard.component.html
+++ b/admin/src/app/components/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="inner-adjust">
         <div class="pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">User Profile</h1>
+          <h1 class="h2">Data</h1>
         </div>
         <!-- Show user data when logged in -->
         <div class="row" *ngIf="authService.userData as user">
@@ -43,16 +43,11 @@
               <!-- <img class="align-self-start mr-5 img-thumbnail rounded-circle"
                 src="{{(user.photoURL) ? user.photoURL : '/assets/dummy-user.png'}}" alt="{{user.displayName}}"> -->
               <div class="media-body">
-                <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
+                <!-- <h1>Hello: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h1>
                 <p>User ID: <strong>{{user.uid}}</strong></p>
                 <p>Email: <strong>{{user.email}}</strong></p>
                 <p>Email Verified: <strong>{{user.emailVerified}}</strong></p>
-                <p>
-                
-                </p>
-                <p>
-                  
-                </p>
+      -->
                 <!-- <div class="d-flex justify-content-start command">
                     <button mat-raised-button color="basic" (click)="setPage(1)">Register</button>
                     <button mat-raised-button color="accent" (click)="setPage(3)">View</button>
