--- a/admin/src/app/components/dashboard/client-alerts/client-alerts.component.html
+++ b/admin/src/app/components/dashboard/client-alerts/client-alerts.component.html
@@ -73,7 +73,7 @@
 </div>
 <button  *ngIf="collectQuestions.length > 0" mat-raised-button color="primary" [cdkCopyToClipboard]="value">Copy to clipboard</button>
 
-<table datatable class="row-border hover"  *ngIf="collectQuestions.length > 0" id="tbl_q">
+<table class="row-border hover"  *ngIf="collectQuestions.length > 0" id="tbl_q">
     <thead>
         <th>
             Email
